--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,7 +34,7 @@ packages = [
 "Issues" = "https://github.com/oraad/pyogero/issues/"
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = ">=3.8,<4"
 requests = "^2.28.1"
 beautifulsoup4 = "^4.11.1"
 aiohttp = "^3.8.1"
