--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,34 +1,10 @@
-name: RELEASE
+name: Release
 on:
   push:
-    branches: [main]
+    tags: ['*']
 
 jobs:
-  test:
-    strategy:
-      fail-fast: false
-      matrix:
-        python-version: ["3.8", "3.9", "3.10"]
-        poetry-version: ["1.2"]
-        os: [ubuntu-latest]
-    runs-on: ${{ matrix.os }}
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Setup Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{ matrix.python-version }}
-      - name: Setup Poetry
-        uses: abatilo/actions-poetry@v2
-        with:
-          poetry-version: ${{ matrix.poetry-version }}
-      - name: Install dependencies
-        run: poetry install
-      - name: Test
-        run: poetry run pytest tests/test_mock_*
-
-  build:
+  create-tag:
     permissions:
       contents: write
     needs: test
@@ -47,20 +23,18 @@ jobs:
       - name: Get version
         id: version
         run: echo "::set-output name=VERSION::v$(poetry version | awk '{ print $2 }')"
-        
       - name: Poetry build for release
         run: poetry build
       - uses: ncipollo/release-action@v1
         with:
           allowUpdates: true
           artifacts: "dist/*"
-          #name: ${{steps.version.outputs.VERSION}}
+          tag: "${{steps.version.outputs.VERSION}}"
           replacesArtifacts: true
-          token: ${{ secrets.RELEASE_TOKEN }}
+          # token: ${{ secrets.RELEASE_TOKEN }}
 
       # - name: Build and publish to pypi
       #   uses: JRubics/poetry-publish@v1.13
       #   # with:
       #   #   pypi_token: ${{ secrets.PYPI_TOKEN }}
-
-
+  
