--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,13 +1,12 @@
 name: Release
 on:
   push:
-    tags: ['*']
+    tags: ['v*']
 
 jobs:
   create-tag:
     permissions:
       contents: write
-    needs: test
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
