chore(actions): Refactor github actions

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  create-tag:
+  build:
     permissions:
       contents: write
     runs-on: ubuntu-latest
@@ -35,4 +35,3 @@ jobs:
         uses: JRubics/poetry-publish@v1.13
         with:
           pypi_token: ${{ secrets.PYPI_TOKEN }}
-  
