--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -9,8 +9,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.8", "3.9", "3.10"]
-        poetry-version: ["1.2"]
+        python-version: ["3.8", "3.9", "3.10", "3.11"]
+        poetry-version: ["1.4"]
         os: [ubuntu-latest]
     runs-on: ${{ matrix.os }}
     steps:
@@ -42,7 +42,7 @@ jobs:
       - name: Setup Poetry
         uses: abatilo/actions-poetry@v2
         with:
-          poetry-version: "1.2"
+          poetry-version: "1.4"
       - name: Get version
         id: version
         run: echo "::set-output name=VERSION::v$(poetry version | awk '{ print $2 }')"
@@ -66,7 +66,7 @@ jobs:
       - name: Setup Poetry
         uses: abatilo/actions-poetry@v2
         with:
-          poetry-version: "1.2"
+          poetry-version: "1.4"
       - name: Get version
         id: version
         run: echo "::set-output name=VERSION::v$(poetry version | awk '{ print $2 }')"
@@ -79,6 +79,6 @@ jobs:
           tag: "${{steps.version.outputs.VERSION}}"
           replacesArtifacts: true
       - name: Build and publish to pypi
-        uses: JRubics/poetry-publish@v1.13
+        uses: JRubics/poetry-publish@v1.16
         with:
           pypi_token: ${{ secrets.PYPI_TOKEN }}
