--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pyogero"
-version = "0.2.0"
+version = "0.3.0"
 description = "Ogero API module"
 authors = ["Omar Raad <omarraad@gmail.com>"]
 license = "MIT"
@@ -22,6 +22,7 @@ classifiers = [
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
 ]
@@ -35,17 +36,17 @@ packages = [
 
 [tool.poetry.dependencies]
 python = ">=3.8,<4"
-requests = "^2.28.1"
-beautifulsoup4 = "^4.11.1"
-aiohttp = "^3.8.3"
-pydantic = "^1.10.2"
+requests = "^2.31.0"
+beautifulsoup4 = "^4.12.2"
+aiohttp = "^3.9.1"
+pydantic = "^1.10.13"
 
 
 [tool.poetry.group.dev.dependencies]
-pytest = "^7.1.3"
-black = "^22.8.0"
+pytest = "^7.4.3"
+black = "^22.12.0"
 pytest-asyncio = ">=0.19,<0.22"
-requests-mock = "^1.10.0"
+requests-mock = "^1.11.0"
 aioresponses = "^0.7.3"
 
 [tool.pytest.ini_options]
