--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pyogero"
-version = "0.6.0"
+version = "0.7.0"
 description = "Ogero API module"
 authors = ["Omar Raad <omarraad@gmail.com>"]
 license = "MIT"
@@ -14,6 +14,7 @@ keywords = [
     "ogero",
     "internet",
     "api",
+    "lebanon"
 ]
 
 classifiers = [
@@ -34,10 +35,10 @@ packages = [
 
 [tool.poetry.dependencies]
 python = ">=3.10,<4"
-requests = "^2.31.0"
-beautifulsoup4 = "^4.12.2"
+requests = ">=2.31.0"
+beautifulsoup4 = ">=4.12.2"
 aiohttp = ">=3.8.5"
-pydantic = "^1.10.13"
+pydantic = ">=1.10.12"
 
 
 [tool.poetry.group.dev.dependencies]
