chore: Fix parser to match new page layout

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -40,7 +40,10 @@
 				],
 				"python.testing.pytestEnabled": true,
 				"python.analysis.diagnosticMode": "workspace"
-			}
+			},
+			"extensions": [
+				"charliermarsh.ruff"
+			]
 		}
 	}
 }
