--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,19 +36,20 @@ packages = [
 
 [tool.poetry.dependencies]
 python = ">=3.10,<4"
-requests = ">=2.31.0"
+requests = ">=2.32.3"
 beautifulsoup4 = ">=4.12.3"
-aiohttp = ">=3.8.5"
-pydantic = ">=1.10.12"
+aiohttp = ">=3.9.5"
+pydantic = ">=2.7.4"
 
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.4"
 black = "^23.12.1"
-pytest-asyncio = ">=0.23.3"
-requests-mock = "^1.11.0"
+pytest-asyncio = ">=0.23.7"
+requests-mock = "^1.12.1"
 aioresponses = "^0.7.3"
-ipykernel = "^6.29.0"
+ipykernel = "^6.29.4"
+ruff = "^0.4.10"
 
 [tool.pytest.ini_options]
 asyncio_mode = "strict"
