--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,8 +9,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.10", "3.11"]
-        poetry-version: ["1.7.1"]
+        python-version: ["3.10", "3.11", "3.12"]
+        poetry-version: ["1.8.2"]
         os: [ubuntu-latest]
     runs-on: ${{ matrix.os }}
     steps:
