--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -9,8 +9,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.10", "3.11"]
-        poetry-version: ["1.7.1"]
+        python-version: ["3.10", "3.11", "3.12"]
+        poetry-version: ["1.8.2"]
         os: [ubuntu-latest]
     runs-on: ${{ matrix.os }}
     steps:
@@ -38,11 +38,11 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
-          python-version: "3.11"
+          python-version: "3.12"
       - name: Setup Poetry
         uses: abatilo/actions-poetry@v2
         with:
-          poetry-version: "1.7.1"
+          poetry-version: "1.8.2"
       - name: Get version
         id: version
         run: echo "::set-output name=VERSION::v$(poetry version | awk '{ print $2 }')"
@@ -62,11 +62,11 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
-          python-version: "3.11"
+          python-version: "3.12"
       - name: Setup Poetry
         uses: abatilo/actions-poetry@v2
         with:
-          poetry-version: "1.7.1"
+          poetry-version: "1.8.2"
       - name: Get version
         id: version
         run: echo "::set-output name=VERSION::v$(poetry version | awk '{ print $2 }')"
