chore: Update dependencies and code cleanup

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pyogero"
-version = "0.10.1"
+version = "0.10.2"
 description = "Ogero API module"
 authors = ["Omar Raad <omarraad@gmail.com>"]
 license = "MIT"
@@ -10,12 +10,7 @@ homepage = "https://github.com/oraad/pyogero"
 repository = "https://github.com/oraad/pyogero"
 # documentation = "https://oraad.github.io/pyogero/"
 
-keywords = [
-    "ogero",
-    "internet",
-    "api",
-    "lebanon"
-]
+keywords = ["ogero", "internet", "api", "lebanon"]
 
 classifiers = [
     "Development Status :: 4 - Beta",
@@ -27,9 +22,7 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 
-packages = [
-    { include = "pyogero" }
-]
+packages = [{ include = "pyogero" }]
 
 
 [tool.poetry.urls]
@@ -39,18 +32,18 @@ packages = [
 python = ">=3.10,<4"
 requests = ">=2.32.3"
 beautifulsoup4 = ">=4.12.3"
-aiohttp = ">=3.9.5"
-pydantic = ">=1.10.15"
+aiohttp = ">=3.10.3"
+pydantic = ">=1.10.17"
 
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.4"
 black = "^23.12.1"
-pytest-asyncio = ">=0.23.7"
+pytest-asyncio = ">=0.23.8"
 requests-mock = "^1.12.1"
 aioresponses = "^0.7.3"
-ipykernel = "^6.29.4"
-ruff = "^0.4.10"
+ipykernel = "^6.29.5"
+ruff = "^0.6.1"
 
 [tool.pytest.ini_options]
 asyncio_mode = "strict"
