--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,34 +3,23 @@
 {
 	"name": "pyOgero",
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
-	"image": "mcr.microsoft.com/devcontainers/python:1-3.12-bookworm",
+	"image": "mcr.microsoft.com/devcontainers/python:1-3.12",
 	"features": {
 		"ghcr.io/devcontainers/features/docker-outside-of-docker:1": {},
 		"ghcr.io/devcontainers-contrib/features/poetry:2": {}
 	},
-
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	// "features": {},
-
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [],
-
 	// Use 'postCreateCommand' to run commands after the container is created.
 	// "postCreateCommand": "pip3 install --user -r requirements.txt",
-
 	// Configure tool-specific properties.
 	// "customizations": {},
-
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
 	// "remoteUser": "root"
-
 	"customizations": {
 		"vscode": {
-			"recommendations": [
-				"ms-python.python",
-				"ms-python.vscode-pylance",
-				"bungcip.better-toml"
-			],
 			"settings": {
 				"python.testing.pytestArgs": [
 					"tests"
@@ -39,10 +28,32 @@
 					"actions"
 				],
 				"python.testing.pytestEnabled": true,
-				"python.analysis.diagnosticMode": "workspace"
+				"python.analysis.diagnosticMode": "workspace",
+				"files.eol": "\n",
+				"editor.tabSize": 4,
+				// "python.analysis.autoSearchPaths": false,
+				"python.linting.enabled": true,
+				// "python.formatting.provider": "black",
+				// "python.formatting.blackPath": "/usr/local/py-utils/bin/black",
+				"python.analysis.typeCheckingMode": "basic",
+				"python.analysis.autoImportCompletions": true,
+				// "python.defaultInterpreterPath": "/usr/local/bin/python",
+				"[python]": {
+					"editor.defaultFormatter": "charliermarsh.ruff"
+				},
+				"editor.formatOnPaste": true,
+				"editor.formatOnSave": true,
+				"editor.formatOnType": true,
+				"files.trimTrailingWhitespace": true
 			},
 			"extensions": [
-				"charliermarsh.ruff"
+				"ms-python.python",
+				"ms-python.vscode-pylance",
+				"charliermarsh.ruff",
+				"github.vscode-pull-request-github",
+				"ryanluker.vscode-coverage-gutters",
+				"tamasfe.even-better-toml",
+				"eamodio.gitlens"
 			]
 		}
 	}
